🔨修复bug： 1. 查询语句过长时弹窗error提示框，无法查询结果 2. 在查询一次结果后使用排除感染查询时无结果回显 3. 设置error.log文件的自动创建 💡新增功能： 1. 添加查询历史记录 2. 滚动条滚动到底部时自动追加下一页数据